# wikrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  WORKLOG.md
.claude/skills/wikrs-dev-workflow/: SKILL.md
.github/workflows/: ci.yml
benches/: compare.rs
docs/: DESIGN.md  PROJECT-HANDOFF.md  README.md  RELEASING.md  TESTING.md
docs/stages/: stage-1-extractor.md  stage-2-ast.md  stage-3-html.md  stage-3-llm-output.md
docs/superpowers/plans/: 2026-06-24-stage-1-extractor.md  2026-06-28-table-extraction.md  2026-06-28-template-fragmentation-leak.md  2026-07-02-markdown-roundtrip.md
docs/superpowers/specs/: 2026-06-28-table-extraction-design.md  2026-06-28-template-fragmentation-leak-design.md
examples/: diag_tally.rs  md_repro.rs  show_page.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: markdown_roundtrip.rs  parse.rs  strip.rs
scripts/: bench.sh
src/: ast.rs  diag.rs  diff.rs  dump.rs  entities.rs  extract.rs  lib.rs  main.rs  mdnorm.rs  output.rs  parser.rs  render.rs  tokenizer.rs
src/extract/: comments.rs  links.rs  markup.rs  templates.rs
src/render/: markdown.rs
tests/: cli.rs  coverage_baseline.txt  diff_report.rs  dump_open.rs  markdown_roundtrip.rs  markdown_snapshots.rs  parse_snapshots.rs  parser_tests.rs  robustness.rs  strip_snapshots.rs
tests/diff/: titles-random.txt  titles.txt
tests/fixtures/: sample_article.wikitext
tests/snapshots/: markdown_snapshots__markdown_path_snapshot.snap  parse_snapshots__parse_path_snapshot.snap  strip_snapshots__article_snapshot.snap
tests/support/: pulldown_nf.rs
tools/bliki/: BlikiBench.java  README.md  setup.sh
tools/wikiextractor/: README.md  setup.sh
xtask/: Cargo.toml
xtask/src/: main.rs
