[package]
name = "wikrs"
version = "0.0.0"
edition = "2021"
description = "Fast, honest wikitext extraction and parsing in Rust"
repository = "https://github.com/SFARL/wikrs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wikitext", "wikipedia", "mediawiki", "parser", "nlp"]
categories = ["text-processing", "parser-implementations"]
publish = false

[lib]
name = "wikrs"
path = "src/lib.rs"

[[bin]]
name = "wikrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
# added per-task by the Stage 1 plan (e.g. insta)
