[package]
name = "wikrs"
version = "0.3.0"
edition = "2021"
description = "Fast, honest wikitext extraction and parsing in Rust"
repository = "https://github.com/SFARL/wikrs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wikitext", "wikipedia", "mediawiki", "parser", "nlp"]
categories = ["text-processing", "parser-implementations"]
exclude = [".github/", ".claude/", ".cargo/", "tools/", "scripts/", "WORKLOG.md"]

[lib]
name = "wikrs"
path = "src/lib.rs"

[[bin]]
name = "wikrs"
path = "src/main.rs"

[[bench]]
name = "compare"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
quick-xml = "0.40.1"
bzip2 = "0.6.1"
rayon = "1.12.0"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = "1.48.0"
parse_wiki_text = "0.1.5"
pulldown-cmark = "0.13"
# added per-task by the Stage 1 plan (e.g. insta)

[workspace]
members = ["xtask"]
exclude = ["fuzz"]
resolver = "2"
