[package]
name = "wikrs-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pulldown-cmark = "0.13"

[dependencies.wikrs]
path = ".."

# Own workspace: keeps the nightly/libfuzzer dependency out of the main build
# and out of CI. Run with: cargo +nightly fuzz run strip
[workspace]

[[bin]]
name = "strip"
path = "fuzz_targets/strip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "markdown_roundtrip"
path = "fuzz_targets/markdown_roundtrip.rs"
test = false
doc = false
bench = false
